--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,36 @@
-fastapi==0.95.1
-uvicorn==0.22.0
-pydantic==1.10.7
-sqlalchemy==2.0.12
-asyncpg==0.27.0
-httpx==0.24.0
+# FastAPI
+fastapi==0.115.7
+uvicorn==0.34.0
+pydantic==2.10.6
+email-validator==2.1.1
+python-multipart==0.0.9
+
+# Database
+sqlalchemy==2.0.38
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
+
+# Authentication
 python-jose==3.3.0
 passlib==1.7.4
-python-multipart==0.0.6
-redis==4.5.4
-websockets==11.0.3
-python-dotenv==1.0.0
-bcrypt==4.0.1
-aiofiles==23.1.0
+bcrypt==4.1.2
+argon2-cffi==23.1.0
+
+# Networking
+httpx==0.27.0
+redis==5.0.3
+websockets==12.0
+
+# Security
+cryptography==42.0.8
+pyopenssl==24.0.0
+certifi==2024.6.2
+
+# Utils
+python-dotenv==1.0.1
+aiofiles==23.2.0
 pykml==0.2.0
 gpxpy==1.5.0
+
+# Rate limiting
+slowapi==0.1.9
