--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,7 +24,8 @@ websockets==12.0
 # Security
 cryptography==42.0.8
 pyopenssl==24.0.0
-certifi==2024.6.2
+certifi>=2024.7.4
+python-magic==0.4.27
 
 # Utils
 python-dotenv==1.0.1
