--- a/indoor_drone_system/api/requirements.txt
+++ b/indoor_drone_system/api/requirements.txt
@@ -1,14 +1,17 @@
-fastapi>=0.95.0
-uvicorn>=0.21.1
-httpx>=0.24.0
-pydantic>=2.0.0
+fastapi==0.115.7
+uvicorn==0.34.0
+httpx==0.27.0
+pydantic==2.10.6
 rclpy>=0.18.0
-numpy>=1.23.0
-opencv-python>=4.7.0
+numpy==1.26.4
+opencv-python==4.10.0.84
 open3d>=0.17.0
-scipy>=1.10.0
-matplotlib>=3.7.0
-websockets>=11.0.0
-python-multipart>=0.0.6
+scipy==1.13.1
+matplotlib==3.9.0
+websockets==12.0
+python-multipart==0.0.9
 PyYAML>=6.0
 pytest>=7.3.1
+cryptography==42.0.8
+pyopenssl==24.0.0
+python-magic==0.4.27
