--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-typer
+# Core dependencies
+typer==0.9.0
 fastapi==0.115.7
 uvicorn[standard]==0.34.0
 pydantic==2.10.6
+email-validator==2.1.1
+python-multipart==0.0.9
+asgiref==3.8.1
+
+# Database
 sqlalchemy==2.0.38
 alembic==1.14.0
 peewee==3.17.9
@@ -9,33 +15,57 @@ peewee-migrate==1.12.2
 psycopg2-binary==2.9.9
 pgvector==0.4.0
 PyMySQL==1.1.1
+pymongo==4.7.1
+redis==5.0.3
+
+# Authentication
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
 bcrypt==4.3.0
-pymongo
-redis
-boto3==1.35.53
 argon2-cffi==23.1.0
+
+# Networking
+httpx==0.27.0
+websockets==12.0
+boto3==1.35.53
+
+# Security
+cryptography==42.0.8
+pyopenssl==24.0.0
+certifi>=2024.7.4
+python-magic==0.4.27
+
+# Utils
+python-dotenv==1.0.1
+aiofiles==23.2.0
+aiocache==0.12.2
 APScheduler==3.10.4
-RestrictedPython==8.0
 loguru==0.7.2
-asgiref==3.8.1
-openai
-anthropic
+RestrictedPython==8.0
+
+# AI and ML
+openai==1.30.1
+anthropic==0.23.0
 google-generativeai==0.8.4
-tiktoken
+tiktoken==0.6.0
 langchain==0.3.19
 langchain-community==0.3.18
-fake-useragent==2.1.0
-chromadb==0.6.3
-pymilvus==2.5.0
-qdrant-client~=1.12.0
-opensearch-py==2.8.0
-playwright==1.49.1
-elasticsearch==8.17.1
-transformers
+transformers==4.42.4
 sentence-transformers==3.3.1
-accelerate
+accelerate==0.30.1
 colbert-ai==0.2.21
 einops==0.8.1
+
+# Vector databases
+chromadb==0.6.3
+pymilvus==2.5.0
+qdrant-client==1.12.0
+opensearch-py==2.8.0
+elasticsearch==8.17.1
+
+# Document processing
+fake-useragent==2.1.0
+playwright==1.49.1
 ftfy==6.2.3
 pypdf==4.3.1
 fpdf2==2.8.2
@@ -43,6 +73,14 @@ pymdown-extensions==10.14.2
 docx2txt==0.8
 python-pptx==0.6.23
 python-docx==1.1.0
-python-multipart==0.0.9
-aiofiles
-aiocache
+
+# Computer vision
+opencv-python==4.10.0.84
+pillow==10.3.0
+numpy==1.26.4
+scipy==1.13.1
+scikit-learn==1.5.0
+matplotlib==3.9.0
+
+# Testing
+pytest==8.0.2
