Fix security vulnerabilities: 1) Add proper error handling in WebSocket exception blocks, 2) Change default host binding from 0.0.0.0 to 127.0.0.1 for security, 3) Pin dependency versions in requirements.txt

--- a/drone_show_service/requirements.txt
+++ b/drone_show_service/requirements.txt
@@ -1,14 +1,16 @@
-fastapi>=0.95.0
-uvicorn>=0.21.1
-pydantic>=1.10.7
-sqlalchemy>=2.0.9
-asyncpg>=0.27.0
-aioboto3>=11.2.0
-httpx>=0.24.0
-websockets>=11.0.2
-numpy>=1.24.3
-python-multipart>=0.0.6
-python-jose>=3.3.0
-passlib>=1.7.4
-bcrypt>=4.0.1
-pymavlink>=2.4.37
+# Pinned versions for security
+fastapi==0.95.2
+uvicorn==0.22.0
+pydantic==1.10.8
+sqlalchemy==2.0.15
+asyncpg==0.27.0
+aioboto3==11.2.0
+httpx==0.24.1
+websockets==11.0.3
+numpy==1.24.3
+# Security-sensitive packages with pinned versions
+python-multipart==0.0.6
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.0.1
+pymavlink==2.4.37
