--- a/drone_show_service/requirements.txt
+++ b/drone_show_service/requirements.txt
@@ -1,16 +1,19 @@
 # Pinned versions for security
-fastapi==0.95.2
-uvicorn==0.22.0
-pydantic==1.10.8
-sqlalchemy==2.0.15
-asyncpg==0.27.0
-aioboto3==11.2.0
-httpx==0.24.1
-websockets==11.0.3
-numpy==1.24.3
+# Updated to address security vulnerabilities
+fastapi==0.110.0
+uvicorn==0.27.1
+pydantic==1.10.13
+sqlalchemy==2.0.28
+asyncpg==0.29.0
+aioboto3==12.3.0
+httpx==0.27.0
+websockets==12.0.0
+numpy==1.26.4
 # Security-sensitive packages with pinned versions
-python-multipart==0.0.6
+python-multipart==0.0.9
+# Note: python-jose has vulnerabilities but no newer version is available
+# Consider replacing with another JWT library in production
 python-jose==3.3.0
 passlib==1.7.4
-bcrypt==4.0.1
-pymavlink==2.4.37
+bcrypt==4.1.2
+pymavlink==2.4.40
