--- a/drone_show_service/requirements.txt
+++ b/drone_show_service/requirements.txt
@@ -10,10 +10,12 @@ httpx==0.27.0
 websockets==12.0.0
 numpy==1.26.4
 # Security-sensitive packages with pinned versions
-python-multipart==0.0.9
+python-multipart==0.0.18
 # Note: python-jose has vulnerabilities but no newer version is available
 # Consider replacing with another JWT library in production
-python-jose==3.3.0
+# For now, we'll use PyJWT as a more secure alternative
+pyjwt==2.8.0
+# python-jose==3.3.0  # Commented out due to security vulnerabilities
 passlib==1.7.4
 bcrypt==4.1.2
 pymavlink==2.4.40
