--- a/addons/sentinelweb/backend/requirements.txt
+++ b/addons/sentinelweb/backend/requirements.txt
@@ -1,16 +1,22 @@
-fastapi==0.95.1
-uvicorn==0.22.0
-pydantic==1.10.7
-sqlalchemy==2.0.12
-asyncpg==0.27.0
-httpx==0.24.0
-python-jose==3.4.0
+fastapi==0.115.7  # Updated from 0.95.1 for security
+uvicorn==0.34.0  # Updated from 0.22.0 for security
+pydantic==2.10.6  # Updated from 1.10.7 for security
+sqlalchemy==2.0.38  # Updated from 2.0.12 for security
+asyncpg==0.29.0  # Updated from 0.27.0 for security
+httpx==0.27.0  # Updated from 0.24.0 for security
+# Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+# python-jose==3.4.0
+pyjwt==2.10.1  # Secure JWT implementation
 passlib==1.7.4
-python-multipart==0.0.6
-redis==4.5.4
-websockets==11.0.3
-python-dotenv==1.0.0
-bcrypt==4.0.1
-aiofiles==23.1.0
+python-multipart==0.0.18  # Updated from 0.0.6 to fix CVE-2024-53981
+redis==5.0.3  # Updated from 4.5.4 for security
+websockets==12.0  # Updated from 11.0.3 for security
+python-dotenv==1.0.1  # Updated from 1.0.0 for security
+bcrypt==4.3.0  # Updated from 4.0.1 for security
+aiofiles==23.2.0  # Updated from 23.1.0 for security
 pykml==0.2.0
 gpxpy==1.5.0
+
+# Security
+cryptography==43.0.1  # Secure version
+pyopenssl==24.0.0  # Secure version
