--- a/ai_detection/requirements.txt
+++ b/ai_detection/requirements.txt
@@ -1,3 +1,10 @@
-fastapi
-uvicorn[standard]
-pydantic
+fastapi==0.115.7  # Pinned version for security
+uvicorn[standard]==0.34.0  # Pinned version for security
+pydantic==2.10.6  # Pinned version for security
+python-multipart==0.0.18  # Secure version
+
+# Security
+cryptography==43.0.1  # Secure version
+pyopenssl==24.0.0  # Secure version
+pyjwt==2.10.1  # Secure JWT implementation
+passlib==1.7.4  # Password hashing
