--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ fastapi==0.115.7
 uvicorn==0.34.0
 pydantic==2.10.6
 email-validator==2.1.1
-python-multipart==0.0.9
+python-multipart==0.0.18  # Updated from 0.0.9 to fix CVE-2024-53981
 
 # Database
 sqlalchemy==2.0.38
@@ -11,7 +11,9 @@ asyncpg==0.29.0
 psycopg2-binary==2.9.9
 
 # Authentication
-python-jose==3.4.0
+# Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+# python-jose==3.4.0
+pyjwt==2.10.1
 passlib==1.7.4
 bcrypt==4.1.2
 argon2-cffi==23.1.0
@@ -22,9 +24,9 @@ redis==5.0.3
 websockets==12.0
 
 # Security
-cryptography==42.0.8
+cryptography==43.0.1  # Updated from 42.0.8 to fix PVE-2024-73711
 pyopenssl==24.0.0
-certifi>=2024.7.4
+certifi==2024.7.4  # Pinned version
 python-magic==0.4.27
 
 # Utils
