--- a/indoor_drone_system/api/requirements.txt
+++ b/indoor_drone_system/api/requirements.txt
@@ -9,9 +9,9 @@ open3d>=0.17.0
 scipy==1.13.1
 matplotlib==3.9.0
 websockets==12.0
-python-multipart==0.0.9
+python-multipart==0.0.18  # Updated from 0.0.9 to fix CVE-2024-53981
 PyYAML>=6.0
 pytest>=7.3.1
-cryptography==42.0.8
+cryptography==43.0.1  # Updated from 42.0.8 to fix PVE-2024-73711
 pyopenssl==24.0.0
 python-magic==0.4.27
