--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ fastapi==0.115.7
 uvicorn[standard]==0.34.0
 pydantic==2.10.6
 email-validator==2.1.1
-python-multipart==0.0.9
+python-multipart==0.0.18  # Updated from 0.0.9 to fix CVE-2024-53981
 asgiref==3.8.1
 
 # Database
@@ -19,7 +19,9 @@ pymongo==4.7.1
 redis==5.0.3
 
 # Authentication
-python-jose[cryptography]==3.3.0
+# Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+# python-jose[cryptography]==3.3.0
+pyjwt==2.10.1
 passlib[bcrypt]==1.7.4
 bcrypt==4.3.0
 argon2-cffi==23.1.0
@@ -30,9 +32,9 @@ websockets==12.0
 boto3==1.35.53
 
 # Security
-cryptography==42.0.8
+cryptography==43.0.1  # Updated from 42.0.8 to fix PVE-2024-73711
 pyopenssl==24.0.0
-certifi>=2024.7.4
+certifi==2024.7.4  # Pinned version
 python-magic==0.4.27
 
 # Utils
