--- a/sentinelweb/requirements.txt
+++ b/sentinelweb/requirements.txt
@@ -1,10 +1,12 @@
 fastapi==0.115.7
 uvicorn[standard]==0.34.0
 pydantic==2.10.6
-python-multipart==0.0.20
+python-multipart==0.0.20  # Already updated to secure version
 
 python-socketio==5.13.0
-python-jose==3.4.0
+# Removing python-jose due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+# python-jose==3.4.0
+pyjwt==2.10.1  # Replacement for python-jose
 passlib[bcrypt]==1.7.4
 
 requests==2.32.3
@@ -46,6 +48,6 @@ langchain-community==0.3.18
 # Drone-specific libraries
 pykml==0.2.0
 gpxpy==1.5.0
-httpx==0.24.0
-websockets==11.0.3
-python-dotenv==1.0.0
+httpx==0.27.0  # Updated from 0.24.0 for security
+websockets==12.0  # Updated from 11.0.3 for security
+python-dotenv==1.0.1  # Updated from 1.0.0 for security
