Fix security vulnerabilities in dependencies across all modules

--- a/ai_analytics/requirements.txt
+++ b/ai_analytics/requirements.txt
@@ -20,10 +20,10 @@ torch>=2.0.0
 torchvision>=0.15.1
 onnxruntime>=1.14.1
 pytesseract>=0.3.10
-Pillow>=9.5.0
+Pillow>=10.3.0  # Updated to fix CVE-2024-28219
 
 # Security
-cryptography==43.0.1  # Secure version
+cryptography==44.0.1  # Updated to fix CVE-2024-12797
 pyopenssl==24.0.0  # Secure version
 pyjwt==2.10.1  # Secure JWT implementation
 passlib==1.7.4  # Password hashing
