--- a/tactical_capabilities/isr_service/requirements.txt
+++ b/tactical_capabilities/isr_service/requirements.txt
@@ -3,17 +3,18 @@ uvicorn==0.27.1
 pydantic==2.11.3
 sqlalchemy==2.0.27
 asyncpg==0.29.0
-python-jose==3.4.0
+# Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+# python-jose==3.4.0
+pyjwt==2.10.1  # Updated from 2.8.0 for security fixes
 passlib==1.7.4
 python-multipart==0.0.20
-pyjwt==2.8.0
-httpx==0.26.0
+httpx==0.27.0  # Updated from 0.26.0 for security fixes
 python-dotenv==1.0.0
 pika==1.3.2
 redis==5.0.1
 numpy==1.26.3
 opencv-python-headless==4.9.0.80
-pillow==10.3.0
+pillow==11.2.1  # Updated from 10.3.0 to fix CVE-2024-28219, CVE-2023-50447
 shapely==2.0.2
 pyproj==3.6.1
 cryptography==44.0.2
