--- a/tactical_capabilities/tacs/requirements.txt
+++ b/tactical_capabilities/tacs/requirements.txt
@@ -5,13 +5,14 @@ sqlalchemy==2.0.28
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
 alembic==1.13.1
-python-jose==3.4.0
+# Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+# python-jose==3.4.0
+pyjwt==2.10.1
 passlib==1.7.4
-python-multipart==0.0.18
+python-multipart==0.0.20  # Updated from 0.0.18 to fix CVE-2024-53981
 aiofiles==23.2.1
 numpy==1.26.4
 scipy==1.12.0
-pyjwt==2.8.0
 aio-pika==9.3.1
 redis==5.0.1
 boto3==1.34.69
