Fix security vulnerabilities: Update black to 24.3.0 (CVE-2024-21503), python-multipart to 0.0.20 (CVE-2024-53981), cryptography to 45.0.0 (CVE-2024-26130, CVE-2024-12797, CVE-2024-6119), and pillow to 11.2.1 (CVE-2024-28219, CVE-2023-50447)

--- a/addons/sentinelweb/backend/requirements.txt
+++ b/addons/sentinelweb/backend/requirements.txt
@@ -18,5 +18,5 @@ pykml==0.2.0
 gpxpy==1.5.0
 
 # Security
-cryptography==44.0.1  # Updated to fix CVE-2024-12797
+cryptography==45.0.0  # Updated from 44.0.1 to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyopenssl==24.0.0  # Secure version
