--- a/ai_detection/requirements.txt
+++ b/ai_detection/requirements.txt
@@ -4,7 +4,7 @@ pydantic==2.11.3  # Pinned version for security
 python-multipart==0.0.18  # Secure version
 
 # Security
-cryptography==44.0.1  # Updated to fix CVE-2024-12797
+cryptography==45.0.0  # Updated from 44.0.1 to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyopenssl==24.0.0  # Secure version
 pyjwt==2.10.1  # Secure JWT implementation
 passlib==1.7.4  # Password hashing
