--- a/requirements-secure.txt
+++ b/requirements-secure.txt
@@ -4,7 +4,7 @@ pytest-cov==4.1.0
 safety==2.3.5
 bandit==1.7.5
 flake8==6.1.0
-black==23.7.0
+black==24.3.0  # Updated to fix CVE-2024-21503 (ReDoS vulnerability)
 isort==5.12.0
 mypy==1.5.1
 pre-commit==3.3.3
