--- a/security/requirements.txt
+++ b/security/requirements.txt
@@ -7,7 +7,7 @@ sqlalchemy==2.0.38
 passlib[bcrypt]==1.7.4
 argon2-cffi==23.1.0
 python-multipart==0.0.20  # Updated from 0.0.9 to fix CVE-2024-53981
-cryptography==44.0.1  # Updated from 42.0.8 to fix PVE-2024-73711
+cryptography==45.0.0  # Updated from 44.0.1 to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyopenssl==24.0.0
 certifi==2024.7.4  # Updated to latest version
 oauthlib==3.2.2
