--- a/tactical_capabilities/isr_service/requirements.txt
+++ b/tactical_capabilities/isr_service/requirements.txt
@@ -17,6 +17,6 @@ opencv-python-headless==4.9.0.80
 pillow==11.2.1  # Updated from 10.3.0 to fix CVE-2024-28219, CVE-2023-50447
 shapely==2.0.2
 pyproj==3.6.1
-cryptography==44.0.2
+cryptography==45.0.0  # Updated from 44.0.2 to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pytest==7.4.4
 pytest-asyncio==0.23.5
