--- a/vision_system/requirements.txt
+++ b/vision_system/requirements.txt
@@ -18,9 +18,9 @@ websockets==12.0
 pyjwt==2.10.1  # Secure JWT implementation
 passlib[bcrypt]==1.7.4
 httpx==0.27.0
-pillow==10.3.0
+pillow==11.2.1  # Updated from 10.3.0 to fix CVE-2024-28219, CVE-2023-50447
 scikit-learn==1.5.0
 scipy==1.13.1
 python-magic==0.4.27
-cryptography==44.0.1  # Updated from 42.0.8 to fix PVE-2024-73711
+cryptography==45.0.0  # Updated from 44.0.1 to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyopenssl==24.0.0
