--- a/sentinelweb/pyproject.toml
+++ b/sentinelweb/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "python-multipart==0.0.20",
 
     "python-socketio==5.13.0",
-    "python-jose==3.4.0",
+    # "python-jose==3.4.0",  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+    "pyjwt==2.10.1",  # Secure JWT implementation
     "passlib[bcrypt]==1.7.4",
 
     "requests==2.32.3",
