--- a/sentinelweb/requirements.txt
+++ b/sentinelweb/requirements.txt
@@ -43,7 +43,7 @@ google-generativeai==0.8.4
 tiktoken==0.6.0  # Pinned to secure version
 
 langchain==0.3.19
-langchain-community==0.3.18
+langchain-community==0.4.0  # Updated to fix CVE-2024-8309, CVE-2024-2965, CVE-2024-46946
 
 # Drone-specific libraries
 pykml==0.2.0
