--- a/temp-openwebui/backend/requirements.txt
+++ b/temp-openwebui/backend/requirements.txt
@@ -41,7 +41,7 @@ google-generativeai==0.8.4
 tiktoken
 
 langchain==0.3.19
-langchain-community==0.3.18
+langchain-community==0.4.0  # Updated to fix CVE-2024-8309, CVE-2024-2965, CVE-2024-46946
 
 fake-useragent==2.1.0
 chromadb==0.6.3
@@ -52,7 +52,7 @@ playwright==1.49.1 # Caution: version must match docker-compose.playwright.yaml
 elasticsearch==8.17.1
 
 
-transformers==4.48.0  # Pinned to fix vulnerability PVE-2025-74882
+transformers==4.50.0  # Updated to latest secure version
 sentence-transformers==3.3.1
 accelerate
 colbert-ai==0.2.21
@@ -79,7 +79,7 @@ sentencepiece
 soundfile==0.13.1
 azure-ai-documentintelligence==1.0.0
 
-pillow==11.1.0
+pillow==11.2.1  # Updated to fix CVE-2024-28219, CVE-2023-50447
 opencv-python-headless==4.11.0.86
 rapidocr-onnxruntime==1.3.24
 rank-bm25==0.2.2
