--- a/sentinelweb/pyproject.toml
+++ b/sentinelweb/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "fastapi==0.115.7",
     "uvicorn[standard]==0.34.0",
     "pydantic==2.10.6",
-    "python-multipart==0.0.20",
+    "python-multipart==0.0.21",  # Updated to latest version to fix CVE-2024-53981
 
     "python-socketio==5.13.0",
     # "python-jose==3.4.0",  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
