--- a/sentinelweb/requirements.txt
+++ b/sentinelweb/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.7
 uvicorn[standard]==0.34.0
 pydantic==2.11.3
-python-multipart==0.0.20  # Updated to fix CVE-2024-53981
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 
 python-socketio==5.13.0
 # Removing python-jose due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
