--- a/temp-openwebui/backend/requirements.txt
+++ b/temp-openwebui/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.7
 uvicorn[standard]==0.34.0
 pydantic==2.10.6
-python-multipart==0.0.20
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 
 python-socketio==5.13.0
 # python-jose==3.4.0 is already updated to the latest version, but we'll use PyJWT instead (see line 91)
