--- a/sentinelweb-backup/backend/requirements.txt
+++ b/sentinelweb-backup/backend/requirements.txt
@@ -6,7 +6,7 @@ asyncpg==0.29.0  # Updated from 0.27.0 for security
 httpx==0.27.0  # Updated from 0.24.0 for security
 # Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 # python-jose==3.4.0
-pyjwt==2.10.1  # Secure JWT implementation
+pyjwt==2.10.2  # Updated to latest version to fix CVE-2024-53861
 passlib==1.7.4
 python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 redis==5.0.3  # Updated from 4.5.4 for security
