--- a/vision_system/requirements.txt
+++ b/vision_system/requirements.txt
@@ -15,7 +15,7 @@ redis==5.0.3
 websockets==12.0
 # Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 # python-jose[cryptography]==3.3.0
-pyjwt==2.10.1  # Secure JWT implementation
+pyjwt==2.10.2  # Updated to latest version to fix CVE-2024-53861
 passlib[bcrypt]==1.7.4
 httpx==0.27.0
 pillow==11.2.1  # Updated from 10.3.0 to fix CVE-2024-28219, CVE-2023-50447
