--- a/sentinelweb/pyproject.toml
+++ b/sentinelweb/pyproject.toml
@@ -6,10 +6,10 @@ authors = [
 ]
 license = { file = "LICENSE" }
 dependencies = [
-    "fastapi==0.115.7",
+    "fastapi==0.115.12",  # Updated to latest version
     "uvicorn[standard]==0.34.0",
     "pydantic==2.11.4",  # Updated to latest version
-    "python-multipart==0.0.18",  # Downgraded from 0.0.21 to fix CVE-2024-53981
+    "python-multipart==0.0.20",  # Updated to latest version to fix CVE-2024-53981
 
     "python-socketio==5.13.0",
     # "python-jose==3.4.0",  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
