--- a/addons/sentinelweb/backend/requirements.txt
+++ b/addons/sentinelweb/backend/requirements.txt
@@ -8,7 +8,7 @@ httpx==0.27.0  # Updated from 0.24.0 for security
 # python-jose==3.4.0
 pyjwt==2.10.2  # Updated to latest version to fix CVE-2024-53861
 passlib==1.7.4
-python-multipart==0.0.18  # Downgraded from 0.0.21 to fix CVE-2024-53981
+python-multipart==0.0.20  # Updated to latest version to fix CVE-2024-53981
 redis==5.0.3  # Updated from 4.5.4 for security
 websockets==12.0  # Updated from 11.0.3 for security
 python-dotenv==1.0.1  # Updated from 1.0.0 for security
