--- a/tactical_capabilities/isr_service/requirements.txt
+++ b/tactical_capabilities/isr_service/requirements.txt
@@ -7,7 +7,7 @@ asyncpg==0.29.0
 # python-jose==3.4.0
 pyjwt==2.10.2  # Updated to latest version to fix CVE-2024-53861
 passlib==1.7.4
-python-multipart==0.0.18  # Downgraded from 0.0.21 to fix CVE-2024-53981
+python-multipart==0.0.20  # Updated to latest version to fix CVE-2024-53981
 httpx==0.27.0  # Updated from 0.26.0 for security fixes
 python-dotenv==1.0.0
 pika==1.3.2
