--- a/ai_detection/requirements.txt
+++ b/ai_detection/requirements.txt
@@ -6,5 +6,5 @@ python-multipart==0.0.20  # Updated to latest version to fix CVE-2024-53981
 # Security
 cryptography==45.0.0  # Updated from 44.0.1 to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyopenssl==24.0.0  # Secure version
-pyjwt==2.10.2  # Updated to latest version to fix CVE-2024-53861
+pyjwt==2.10.1  # Downgraded to fix CVE-2024-53861
 passlib==1.7.4  # Password hashing
