--- a/drone_swarm_system/requirements.txt
+++ b/drone_swarm_system/requirements.txt
@@ -11,7 +11,7 @@ redis==5.0.4  # Updated to latest version
 websockets==12.0
 # Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 # python-jose[cryptography]==3.3.0
-pyjwt==2.10.2  # Updated to latest version to fix CVE-2024-53861
+pyjwt==2.10.1  # Downgraded to fix CVE-2024-53861
 passlib[bcrypt]==1.7.4
 httpx==0.27.0
 geopy==2.4.1
