--- a/sentinelweb/requirements.txt
+++ b/sentinelweb/requirements.txt
@@ -6,7 +6,7 @@ python-multipart==0.0.20  # Updated to latest version to fix CVE-2024-53981
 python-socketio==5.13.0
 # Removing python-jose due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 # python-jose==3.4.0
-pyjwt==2.10.2  # Updated to latest version to fix CVE-2024-53861
+pyjwt==2.10.1  # Downgraded to fix CVE-2024-53861
 passlib[bcrypt]==1.7.4
 
 requests==2.32.3
