--- a/tactical_capabilities/sigint_service/requirements.txt
+++ b/tactical_capabilities/sigint_service/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.27.1
 pydantic==2.11.4  # Updated to latest version
 sqlalchemy==2.0.27
 asyncpg==0.29.0
-pyjwt==2.10.2  # Updated to latest version to fix CVE-2024-53861
+pyjwt==2.10.1  # Downgraded to fix CVE-2024-53861
 passlib==1.7.4
 python-multipart==0.0.20  # Updated to latest version to fix CVE-2024-53981
 httpx==0.27.0  # Updated from 0.26.0 for security fixes
