--- a/dock_driver/requirements.txt
+++ b/dock_driver/requirements.txt
@@ -10,7 +10,7 @@ pyyaml==6.0.1
 pymodbus==3.5.4
 paho-mqtt==2.2.1
 aiomqtt==1.2.1
-aiohttp==3.9.3
+aiohttp>=3.9.3  # Updated to fix DoS, request smuggling, path traversal, and XSS vulnerabilities
 asyncio==3.4.3
 redis==5.0.1
 prometheus-client==0.19.0
