--- a/federated_learning/integration_test/requirements.txt
+++ b/federated_learning/integration_test/requirements.txt
@@ -3,7 +3,7 @@ torchvision>=0.14.0
 flwr>=1.4.0
 opacus>=1.4.0
 numpy>=1.22.0
-pillow>=9.3.0
+pillow==11.2.2  # Updated to fix CVE-2024-28219, CVE-2023-50447, CVE-2024-4863
 pyyaml>=6.0
 requests>=2.28.0
 pytest>=7.3.1
