--- a/federated_learning/server/requirements.txt
+++ b/federated_learning/server/requirements.txt
@@ -8,9 +8,9 @@ cryptography>=39.0.0
 protobuf>=3.20.0
 tensorboard>=2.11.0
 requests>=2.28.0
-fastapi>=0.95.0
+fastapi==0.115.12  # Updated to latest version for security improvements
 uvicorn>=0.21.0
-python-multipart>=0.0.6
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 aiohttp>=3.8.4
 argon2-cffi==23.1.0  # For secure password hashing
 pydantic==2.11.4  # For secure data validation
