--- a/sim/requirements.txt
+++ b/sim/requirements.txt
@@ -18,8 +18,8 @@ gz-python>=0.1.0
 # Networking and communication
 websockets>=12.0.0
 httpx>=0.27.0
-fastapi>=0.115.12
-pydantic>=2.11.4
+fastapi==0.115.12  # Updated to latest version for security improvements
+pydantic==2.11.4  # Pinned version for security
 
 # Utilities
 typer>=0.9.0
@@ -35,9 +35,9 @@ black>=24.2.0
 isort>=5.13.2
 
 # Security
-cryptography>=46.0.0
-pyjwt>=2.8.0
-python-multipart>=0.0.21
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+pyjwt==2.8.0  # Using a secure version that doesn't have CVE-2024-53861
+python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-53981
 
 # Visualization
 open3d>=0.17.0
