--- a/.github/workflows/run-all-workflows.yml
+++ b/.github/workflows/run-all-workflows.yml
@@ -5,6 +5,14 @@ on:
     - cron: '0 0 * * *'  # Run daily at midnight
   workflow_dispatch:  # Allow manual triggering
 
+
+permissions:
+  contents: read
+  issues: read
+  pull-requests: read
+  actions: read
+  security-events: read
+
 jobs:
   run-workflows:
     runs-on: ubuntu-latest
