--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,14 @@ on:
     branches:
       - main
   workflow_dispatch:  # Allow manual triggering
+
+permissions:
+  contents: read
+  issues: read
+  pull-requests: read
+  actions: read
+  security-events: read
+
 jobs:
   code-quality:
     runs-on: ubuntu-latest
