--- a/.github/workflows/security-review.yml
+++ b/.github/workflows/security-review.yml
@@ -4,6 +4,14 @@ on:
     - cron: '0 8 * * 1'  # Weekly on Monday at 8 AM
     - cron: '0 8 1 * *'  # Monthly on the 1st at 8 AM
   workflow_dispatch: # Allow manual triggering
+
+permissions:
+  contents: read
+  issues: read
+  pull-requests: read
+  actions: read
+  security-events: read
+
 jobs:
   weekly-security-review:
     runs-on: ubuntu-latest
