--- a/counter_uas/requirements.txt
+++ b/counter_uas/requirements.txt
@@ -13,7 +13,7 @@ pytest-asyncio>=0.15.1
 pytest-cov>=2.12.1
 
 # Development dependencies
-black>=21.6b0
+black==24.3.0
 isort>=5.9.2
 mypy>=0.910
 flake8>=3.9.2
