--- a/drone_show_service/requirements.txt
+++ b/drone_show_service/requirements.txt
@@ -10,8 +10,7 @@ httpx==0.27.0
 websockets==12.0.0
 numpy==1.26.4
 # Security-sensitive packages with pinned versions
-python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981
-# Note: python-jose has vulnerabilities but no newer version is available
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981# Note: python-jose has vulnerabilities but no newer version is available
 # Consider replacing with another JWT library in production
 # For now, we'll use PyJWT as a more secure alternative
 pyjwt==2.8.0  # Using a secure version that doesn't have CVE-2024-53861  # Downgraded to fix CVE-2024-53861
