--- a/mapping_service/requirements.txt
+++ b/mapping_service/requirements.txt
@@ -1,7 +1,7 @@
 # FastAPI
 fastapi>=0.95.0
 uvicorn>=0.21.1
-python-multipart>=0.0.6
+python-multipart==0.0.18
 
 # Database
 sqlalchemy>=2.0.0
@@ -21,7 +21,7 @@ pillow>=9.5.0
 pydantic>=1.10.7
 python-dotenv>=1.0.0
 httpx>=0.24.0
-aiohttp>=3.8.4
+aiohttp==3.11.18
 
 # Testing
 pytest>=7.3.1
