--- a/requirements-updated.txt
+++ b/requirements-updated.txt
@@ -4,8 +4,7 @@ fastapi==0.115.12  # Updated to latest version for security improvements  # Upda
 uvicorn[standard]==0.34.0
 pydantic==2.11.3
 email-validator==2.1.1
-python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539818  # Updated from 0.0.9 to fix CVE-2024-53981
-asgiref==3.8.1
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539818  # Updated from 0.0.9 to fix CVE-2024-53981asgiref==3.8.1
 
 # Database
 sqlalchemy==2.0.38
