--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ fastapi==0.115.12  # Updated to latest version for security improvements  # Upda
 uvicorn[standard]==0.34.2  # Updated to latest version
 pydantic==2.11.4  # Updated to latest version
 email-validator==2.2.0  # Updated to latest version
-python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-53981
-asgiref==3.8.1
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-53981asgiref==3.8.1
 
 # Database
 sqlalchemy==2.0.40  # Updated to latest version
@@ -30,8 +29,7 @@ argon2-cffi==23.1.0
 httpx==0.28.1
 websockets==15.0.1
 boto3==1.38.14
-aiohttp==3.11.18  # Updated to fix CVE-2024-52303, CVE-2024-52304, CVE-2024-42367
-aiomqtt==1.2.1
+aiohttp==3.11.18  # Updated to fix CVE-2024-52303, CVE-2024-52304, CVE-2024-42367aiomqtt==1.2.1
 
 # Security
 cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
@@ -56,15 +54,13 @@ google-generativeai==0.8.5  # Updated to latest version
 tiktoken==0.9.0  # Updated to latest version
 langchain==0.3.25  # Updated to latest version
 langchain-community==0.4.0  # Updated to fix CVE-2024-8309, CVE-2024-2965, CVE-2024-469464  # Updated to latest version, fixes CVE-2024-8309, CVE-2024-2965, CVE-2024-46946
-transformers==4.51.3  # Updated to latest version
-sentence-transformers==4.1.0  # Updated to latest version
+transformers==4.50.0  # Updated to latest versionsentence-transformers==4.1.0  # Updated to latest version
 accelerate==1.6.0  # Updated to latest version
 colbert-ai==0.2.21
 einops==0.8.1
 tinygrad==0.9.0  # Lightweight ML runtime
 safetensors==0.4.3  # For loading safetensors models
-torch==2.7.0  # Pinned to specific version for better security
-onnx==1.17.0  # ONNX model format support, updated to fix CVE-2024-7776
+torch==2.5.2  # Pinned to specific version for better securityonnx==1.17.0  # ONNX model format support, updated to fix CVE-2024-7776
 # WARNING: ONNX has a known vulnerability (CVE-2024-5187) in download_model_with_test_data function.
 # Mitigation: Do not use download_model_with_test_data function with untrusted sources.
 onnxruntime==1.22.0  # Updated to latest version
