--- a/sentinelweb/backend/requirements.txt
+++ b/sentinelweb/backend/requirements.txt
@@ -1,8 +1,7 @@
 fastapi==0.115.12  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version
 uvicorn[standard]==0.34.0
 pydantic==2.10.6
-python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981
-
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981
 python-socketio==5.13.0
 # Removing python-jose due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 # # # # # # python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
@@ -10,7 +9,7 @@ python-socketio==5.13.0
 passlib[bcrypt]==1.7.4
 
 requests==2.32.3
-aiohttp==3.11.11
+aiohttp==3.11.18
 async-timeout
 aiocache
 aiofiles
@@ -54,8 +53,7 @@ playwright==1.49.1 # Caution: version must match docker-compose.playwright.yaml
 elasticsearch==8.17.1
 
 
-transformers==4.50.0  # Pinned to fix vulnerability PVE-2025-74882
-sentence-transformers==3.3.1
+transformers==4.50.0  # Pinned to fix vulnerability PVE-2025-74882sentence-transformers==3.3.1
 accelerate
 colbert-ai==0.2.21
 einops==0.8.1
@@ -93,7 +91,7 @@ faster-whisper==1.1.1
 PyJWT[crypto]==2.10.1
 authlib==1.4.1
 
-black==25.1.0
+black==24.3.0
 langfuse==2.44.0
 youtube-transcript-api==1.0.3
 pytube==15.0.0
