--- a/temp-openwebui/backend/requirements.txt
+++ b/temp-openwebui/backend/requirements.txt
@@ -1,14 +1,13 @@
 fastapi==0.115.12  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version
 uvicorn[standard]==0.34.0
 pydantic==2.11.4  # Updated to latest version
-python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981
-
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981
 python-socketio==5.13.0
 # # # # # # python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663 is already updated to the latest version, but we'll use PyJWT instead (see line 91)
 passlib[bcrypt]==1.7.4
 
 requests==2.32.3
-aiohttp==3.11.11
+aiohttp==3.11.18
 async-timeout
 aiocache
 aiofiles
@@ -52,8 +51,7 @@ playwright==1.49.1 # Caution: version must match docker-compose.playwright.yaml
 elasticsearch==8.17.1
 
 
-transformers==4.50.0  # Updated to latest secure version
-sentence-transformers==3.3.1
+transformers==4.50.0  # Updated to latest secure versionsentence-transformers==3.3.1
 accelerate
 colbert-ai==0.2.21
 einops==0.8.1
@@ -91,7 +89,7 @@ faster-whisper==1.1.1
 PyJWT[crypto]==2.10.1
 authlib==1.4.1
 
-black==25.1.0
+black==24.3.0
 langfuse==2.44.0
 youtube-transcript-api==1.0.3
 pytube==15.0.0
