--- a/vision_system/requirements.txt
+++ b/vision_system/requirements.txt
@@ -4,11 +4,10 @@ pydantic==2.11.3
 sqlalchemy==2.0.38
 alembic==1.14.0
 psycopg2-binary==2.9.9
-python-multipart==0.0.21  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-53981
-aiofiles==23.2.0
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-53981aiofiles==23.2.0
 numpy==1.26.4
 opencv-python==4.10.0.84
-torch>=2.1.0
+torch==2.5.2
 torchvision==0.18.1
 matplotlib==3.9.0
 redis==5.0.3
